ci: fix missing run: | in build.yml

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -69,6 +69,7 @@ jobs:
         cmake --build --preset conan-release
 
     - name: Package binary
+      run: |
         mkdir -p dist
         cp LICENSE dist/
         cp -r assets dist/ || true
