--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-22.04, windows-2022, macos-14]
+        os: [ubuntu-22.04, windows-latest, macos-14]
     runs-on: ${{ matrix.os }}
 
     steps:
@@ -25,12 +25,12 @@ jobs:
       if: runner.os == 'Linux'
       run: |
         sudo apt-get update
-        sudo apt-get install -y python3-pip cmake ninja-build pkg-config
+        sudo apt-get install -y python3-pip cmake ninja-build pkg-config libgl-dev libgl1-mesa-dev
 
     - name: Install dependencies (MacOS)
       if: runner.os == 'macOS'
       run: |
-        brew install python cmake ninja --no-progress
+        brew install python cmake ninja --quiet
 
     - name: Install 7zip (Windows)
       if: runner.os == 'Windows'
@@ -44,6 +44,8 @@ jobs:
     - name: Conan Profile detection
       run: |
         conan profile detect --force
+        # force to use c++23
+        conan profile update settings.compiler.cppstd=23 default
 
     - name: Cache conan
       uses: actions/cache@v4
