--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -40,20 +40,16 @@ jobs:
     - name: Install Conan
       run: |
         python -m pip install conan
-      
-    - name: Conan Profile detection
+
+    - name: Install game dependencies
       run: |
-        conan profile detect --force
+        conan install . --build=missing -s build_type=Release -s compiler.cppstd=23
 
     - name: Cache conan
       uses: actions/cache@v4
       with:
         path: ~/.conan2
         key: conan-${{ runner.os }}-${{ hashFiles('conanfile.txt') }}
-
-    - name: Install game dependencies
-      run: |
-        conan install . --build=missing -s build_type=Release
 
     - name: Config cmake
       run: |
