--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,6 +43,7 @@ jobs:
 
     - name: Install game dependencies
       run: |
+        conan profile detect --force
         conan install . --build=missing -s build_type=Release -s compiler.cppstd=23
 
     - name: Cache conan
